--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "tsx src/index.ts",
+    "serve": "tsx watch src/index.ts",
     "build": "tsx src/deploy-commands.ts"
   },
   "keywords": [],
