--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/rest": "^2.0.1",
-    "discord.js": "^14.13.0",
+    "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
-    "tsx": "^3.13.0",
+    "roll": "^1.3.1"
+  },
+  "devDependencies": {
+    "@types/roll": "^1.2.2",
+    "tsx": "^3.14.0",
     "typescript": "^5.2.2"
   }
 }
