--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.5.2",
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
-    "roll": "^1.3.1"
+    "prisma": "^5.5.2"
   },
   "devDependencies": {
     "@types/roll": "^1.2.2",
